# darkness

./: .gitignore  BUGS.txt  README.md  RESOURCES.md  TODO.txt  bootstrap.env-only.sh  bootstrap.sh  dbot_front.js  dbot_tunnel.js  package.json  run_front
commands/: .gitignore  README.md  boxrec  hello  ils  urban  vping  zargs
commands/.private/: build-everything.sh
commands/ada/: Makefile.template  echo  zargs
commands/ada/_argc/: Makefile  argc.adb
commands/ada/_echo/: Makefile  echo.adb
commands/ada/_vping/: Makefile  vping.adb
commands/ada/_zargs/: .gitignore  Makefile  zargs.adb
commands/ada/ref/: install  install.itxt  spec  spec.itxt  stdlib  stdlib.itxt
commands/apl/ref/: docs.itxt  try.itxt  tutorials.itxt
commands/awk/: argc  vping
commands/awk/_argc/: argc.awk
commands/awk/_vping/: vping.awk
commands/awk/ref/: spec.itxt  tutorials.itxt
commands/bash/: argc  echo  triggers-count-search  triggers-count-search-author  triggers-count-search-key  triggers-count-search-value  triggers-create  triggers-delete  triggers-get  triggers-info  triggers-search  triggers-search-author  triggers-search-key  triggers-search-value
commands/bash/_echo/: echo.sh
commands/bash/_triggers-count-search/: search.sh
commands/bash/_triggers-count-search-author/: search.sh
commands/bash/_triggers-count-search-key/: search.sh
commands/bash/_triggers-count-search-value/: search.sh
commands/bash/_triggers-create/: create.sh
commands/bash/_triggers-get/: Makefile  get.sh
commands/bash/_triggers-info/: info.sh
commands/bash/_triggers-search/: search.sh
commands/bash/_triggers-search-author/: search.sh
commands/bash/_triggers-search-key/: search.sh
commands/bash/_triggers-search-value/: search.sh
commands/bash/_vping/: Makefile  vping.sh
commands/bash/ref/: cheat  cheat.itxt  spec
commands/c/: Makefile.template
commands/c/_argc/: Makefile  argc.c
commands/c/_echo/: Makefile  echo  echo.c
commands/c/_vping/: Makefile  vping.c
commands/c/ref/: cheat  spec  spec.itxt  stdlib  stdlib.itxt
commands/clojure/: argc  vping  zargs
commands/clojure/_argc/: CHANGELOG.md  README.md  project.clj
commands/clojure/_echo/: CHANGELOG.md  README.md  project.clj
commands/clojure/_vping/: CHANGELOG.md  README.md  project.clj
commands/clojure/_zargs/: CHANGELOG.md  README.md  project.clj
commands/clojure/ref/: cheat  cheat.itxt  install  install.itxt  quick.itxt  stdlib  stdlib.itxt
commands/coffee/: argc  vping
commands/coffee/_argc/: argc.coffee
commands/coffee/_vping/: vping.coffee
commands/coffee/ref/: cheat
commands/cpp/: Makefile.template
commands/cpp/_argc/: Makefile  argc.cpp
commands/cpp/_echo/: Makefile  echo.cpp
commands/cpp/_vping/: vping.cpp
commands/cpp/ref/: spec  spec.itxt  stdlib  stdlib.itxt
commands/cpp/vping/: Makefile  vping
commands/curry/ref/: examples.itxt  install  install.itxt  spec  spec.itxt  stdlib  stdlib.itxt
commands/elixir/_vping/: README.md  mix.exs  vping.sh
commands/elixir/ref/: cheat  cheat.itxt  install  install.itxt  stdlib  stdlib.itxt
commands/erlang/: Makefile.template  argc  argv  vping
commands/erlang/_argc/: argc.erl
commands/erlang/_argv/: Makefile  argv.erl
commands/erlang/_vping/: Makefile  vping.erl  vping.sh
commands/erlang/ref/: install  install.itxt  rebar  rebar.itxt  spec  spec.itxt  stdlib  stdlib.itxt  tutorials  tutorials.itxt
commands/etc/keys/: .gitignore  forecast.io.txt.local
commands/fortran/: Makefile.template
commands/fortran/_argc/: Makefile  argc.f90
commands/fortran/_vping/: vping.f90
commands/fortran/ref/: install.itxt  spec.itxt  stdlib.itxt
commands/go/: Makefile.template  argc
commands/go/_argc/: .gitignore  Makefile  argc.go
commands/go/_vping/: .gitignore  vping.go
commands/go/ref/: cheat.itxt  help  spec  stdlib
commands/haskell/: Makefile.template  echo  runcalc  units  vping
commands/haskell/_echo/: Makefile  echo.cabal
commands/haskell/_echo/app/: Main.hs
commands/haskell/_echo/src/Darkness/Commands/: Echo.hs
commands/idris/: Makefile.template  install.itxt  spec.itxt
commands/nodejs/: boxrec  google-search  urban  vping  wea
commands/ocaml/: vping
commands/perl/: vping
commands/php/: install.itxt  spec.itxt  vping
commands/prolog/: vping
commands/python/: Makefile  vping  vping.py
commands/r/: vping
commands/ruby/: vping
commands/rust/: vping
commands/sh/: icat  ils  vping  zargs
commands/smalltalk/: vping
commands_private/haskell/: irssi-log-ingest  loc
commands_private/haskell/_loc/: loc.cabal
commands_private/haskell/_loc/app/: Main.hs
commands_private/haskell/_loc/src/Darkness/Commands/Private/: LOC.hs
config/: redis.json.example
config.example/dev/: triggers.json
config.example/efnet/: redis.json  relay.json  triggers.json
config/front/: config.js  config.json.example
config/relay/: config.json.example
config/tunnel/: config.js  config.json.example
core/go/: design.txt
core/nodejs/: package.json  run_tunnel
launch/: start_simple.sh  stop_simple.sh
listeners/: Makefile  c.c  c.h  perl.pl  python.py  test.sh
listeners/c_files/: Makefile  nop.c
listeners/go/: go.go
listeners/haskell/triggers/: Makefile  README.md  stack.yaml  triggers.cabal
listeners/haskell/triggers/app/: Main.hs
listeners/haskell/triggers/cli/: Main.hs
listeners/haskell/triggers/cli-optparse-generic/: Main.hs
listeners/haskell/triggers/src/Darkness/Listeners/: Triggers.hs
listeners/haskell/triggers/src/Darkness/Listeners/Triggers/: Api.hs  Config.hs  Models.hs  ServiceMain.hs  Types.hs
listeners/haskell/triggers/src/Darkness/Listeners/Triggers/Api/: Client.hs
listeners/installers/: hiredis  jsonc  node  ruby
listeners/node_files/: benchmark.js  features.js  nop.js
listeners/nodejs/: node.js  node_simple.js  package.json
listeners/php/: php.php
listeners/php_files/: benchmark.php  echo.php
listeners/ruby/: ruby.rb
listeners/tests/: regex.js
notes/: fun.txt  installing_packages.txt  installing_packages_osx.txt
pub/: app.js  index.html
pub/css/: app.css
(+260 files in other folders)
