name:                triggers
version:             0.1.0.0
synopsis:            triggers listeners & binaries
description:         Please see README.md
homepage:            http://github.com/adarqui/darkness#readme
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Darkness.Listeners.Triggers
                     , Darkness.Listeners.Triggers.Api
                     , Darkness.Listeners.Triggers.Api.Client
                     , Darkness.Listeners.Triggers.Config
                     , Darkness.Listeners.Triggers.Models
                     , Darkness.Listeners.Triggers.ServiceMain
                     , Darkness.Listeners.Triggers.Types
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , bytestring
                     , either >= 4.4.1
                     , monad-logger >= 0.3.18
                     , mtl >= 2.2.1
                     , servant >= 0.4.4.6
                     , servant-docs
                     , servant-server
                     , servant-client
                     , persistent >= 2.2.4
                     , persistent-sqlite
                     , persistent-template >= 2.1.5
                     , time >= 1.5.0.1
                     , text
                     , transformers >= 0.4.0.2
                     , wai >= 3.2.0
                     , wai-extra >= 3.0.14
                     , warp >= 3.2.2
  default-language:    Haskell2010
  ghc-options:         -Wall

executable dark-listener-haskell-triggers
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , triggers
  default-language:    Haskell2010

executable triggers-cli
  hs-source-dirs:      cli
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , mtl
                     , optparse-applicative
                     , text
                     , time
                     , triggers
  default-language:    Haskell2010

test-suite triggers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , triggers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/darkness
